# AI-Labs

./: .gitignore  WARP.md  pyproject.toml
lab1/: README.md  lab1.tex
lab2/: Lab2_Overview.md  README.md  model.py  play.py  solver_base.py
lab2/lab/: Lab2_AI_Search_Algorithms.tex  README.md
lab2/searches/astar_8_puzzle/: astar.py  astar_solver.py
lab2/searches/bfs_8_puzzle/: bfs.py  bfs_solver.py
lab2/searches/bidirection_8_puzzle/: bidirectional.py  bidirectional_solver.py
lab2/searches/depth_li_8_puzzle/: depth_limited_solver.py  dls.py
lab2/searches/dfs_8_puzzle/: dfs.py  dfs_solver.py
lab2/searches/greedy_8_puzzle/: greedy.py  greedy_best_first_solver.py
lab2/searches/ids_8_puzzle/: ids.py  iterative_deepening_solver.py
lab2/searches/uniform_8_puzzle/: ucs.py  uniform_cost_solver.py
lab3/: Genetic_Algorithm.ipynb  Lab3_Genetic_Algorithm_Report.tex  Lab3_Genetic_Algorithm_Report_backup.tex  lab3.txt  task.csv
lab4/: Lab4_Fuzzy_Logic_Report.tex  fuzzy_logic.ipynb  lab4.txt  task.csv
lab5/: Lab5_MLP_Report.tex  MLP.ipynb  parameters.csv
lab6/: Lab6_RNN_Report_Clean.tex  RNN_anam.ipynb  param.csv
lab7/: Lab7_Naive_Bayes_Report.tex  naive_bayes.ipynb
lab8/: Lab8_Logic_Report.tex
