[project]
name = "labs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "ipykernel>=6.30.1",
    "matplotlib>=3.9.4",
    "networkx>=3.2.1",
    "numpy>=2.0.2",
    "pandas>=2.3.2",
    "pygame>=2.6.1",
    "scikit-fuzzy>=0.5.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.13.1",
]
